--- a/public/index.html
+++ b/public/index.html
@@ -115,13 +115,12 @@
 
                     </div>
                     <!-- Enough airtime ends here -->
-                    <div class="input-field col l6 m12 s12"
-                        style="text-align: center; background-color: rgba(127, 187, 255, 0.707);">
+                    <div class="input-field col l6 m12 s12" style="text-align: center; background-color: rgba(127, 187, 255, 0.707);">
                         <!-- Transport fee starts here -->
                         <h5 x-text="titleTransportFee"></h5><br><br>
                         <form x-model="daytime" name="time" id="time">
                             <label for="time">Choose a time of day:</label>
-                            <select class="browser-default" name="languages" id="languages">
+                            <select class="browser-default" name="time" id="time">
                                 <option value="" disabled selected>Choose a Shift</option>
                                 <option value="morning">Morning</option>
                                 <option value="afternoon">Afternoon</option>
