--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
             display: none;
         }
     </style>
+     <script src="code.js" ></script>
 
 </head>
 
@@ -186,7 +187,7 @@
                     <!-- Weekday ends here -->
                 </div>
             </section>
-            <script src="code.js" async defer></script>
+        
         </main>
 </body>
 <footer class="page-footer">
