Fixed the weekend api function with the help of the mentors

--- a/public/index.html
+++ b/public/index.html
@@ -169,13 +169,13 @@
                             <label for="times">Choose the day of the week</label>
                             <select class="browser-default" x-model="weekss" name="times" id="times">
                                 <option value="" disabled selected>Choose a day</option>
-                                <option value="Week">Monday</option>
-                                <option value="Week">Tuesday</option>
-                                <option value="Week">Wednesday</option>
-                                <option value="Week">Thursday</option>
-                                <option value="Week">Friday</option>
-                                <option value="Weekend">Saturday</option>
-                                <option value="Weekend">Sunday</option>
+                                <option value="Monday">Monday</option>
+                                <option value="Tuesday">Tuesday</option>
+                                <option value="Wednesday">Wednesday</option>
+                                <option value="Thursday">Thursday</option>
+                                <option value="Friday">Friday</option>
+                                <option value="Saturday">Saturday</option>
+                                <option value="Sunday">Sunday</option>
 
                             </select><br>
                             <button x-on:click="weeks">Submit</button>
